--- a/markdown.rmd
+++ b/markdown.rmd
@@ -76,7 +76,7 @@ head (stepperday)
 ###Step 2: make a histogram of the total number of steps taken each day
 The histogram is made with the binwidth setting at 2000. 
 
-```{r plot step per day}
+```{r plot-step-per-day}
 qplot(stepperday$steps, geom = 'histogram', xlab = "Steps", main = "Total number of steps taken each day", binwidth = 2000)
 ```
 
@@ -101,7 +101,7 @@ averagestep <- dataset %>% filter (!is.na(steps)) %>% group_by (interval) %>% su
 ###Step 1: Plotting
 Make a time series plot (type = 'l') of the 5-minute interval (x-axis) and the average number of steps taken, average across all days (y-axis). The plot is
 
-```{r plot average step}
+```{r plot-average-step}
 qplot (averagestep$interval, averagestep$averagestep, geom = 'line', xlab = "Time interval", ylab = "Average Step", main = "Average number of steps taken in time of the day")
 ```
 
@@ -144,7 +144,7 @@ completestepperday <- completedataset %>% group_by(date) %>% summarise (steps = 
 ```
 
 Then the histogram is plotted. 
-```{r plotting complete step per day}
+```{r plotting-complete-step-per-day}
 qplot(completestepperday$steps, geom = 'histogram', xlab = "Steps", main = "Total number of steps taken each day (missing data replaced)", binwidth = 2000)
 ```
 
@@ -181,7 +181,7 @@ head(completedataset)
 ###Step 2: Make a panel plot and calculate average 
 Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The following is the code.
 
-```{r panel plot and weekday average}
+```{r panel-plot-and-weekday-average}
 # creating a new dataset that calculate average steps of each interval of weekday and weekend
 stepperinterval <- completedataset %>% group_by(interval, daytype) %>% summarize (steps = mean(steps))
 
